--- a/pom.xml
+++ b/pom.xml
@@ -30,36 +30,50 @@
                     </archive>
                 </configuration>
             </plugin>
-            <!-- Plugin jdeb para crear el paquete .deb 
+            <!-- Copiar dependencias a la carpeta lib -->
             <plugin>
-                <groupId>org.vafer</groupId>
-                <artifactId>jdeb</artifactId>
-                <version>1.8</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
                 <executions>
                     <execution>
+                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>jdeb</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <controlDir>${project.basedir}/src/deb/control</controlDir>
-                    <data>
-                        <fileSet>
-                            <directory>${project.build.directory}</directory>
-                            <includes>
-                                <include>*.jar</include>
-                            </includes>
-                            <outputDirectory>/opt/GameArchive</outputDirectory>
-                        </fileSet>
-                        <fileSet>
-                            <directory>${project.build.directory}/dependency</directory>
-                            <outputDirectory>/opt/GameArchive/lib</outputDirectory>
-                        </fileSet>
-                    </data>
-                </configuration>
-            </plugin>-->
+            </plugin>
+            <!-- Copiar recursos a la carpeta resources -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/resources</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources</directory>
+                                    <includes>
+                                        <include>**/*</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
